# schema-check

./: .gitignore  README.md  pyproject.toml
github/workflows/: tests.yml
src/schematic/: __init__.py
tests/: test_dict.py  test_list.py  test_schematic.py
